--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,37 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>test</groupId>
+  <groupId>uaEquals42</groupId>
   <artifactId>JAC</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <issueManagement>
+  	<url>https://github.com/uaEquals42/JAC/issues</url>
+  </issueManagement>
+  
+  <licenses>
+      <license>
+        <name>GPL 3</name>
+        <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
+        <distribution>repo</distribution>
+        <comments>GPL 3</comments>
+      </license>
+    </licenses>
+  
+  <inceptionYear>2014</inceptionYear>
+  <name>JAC</name>
+  <url>https://github.com/uaEquals42/JAC</url>
+  <dependencies>
+  	<dependency>
+  		<groupId>ch.qos.logback</groupId>
+  		<artifactId>logback-classic</artifactId>
+  	</dependency>
+  </dependencies>
+  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+  			<groupId>ch.qos.logback</groupId>
+  			<artifactId>logback-classic</artifactId>
+  			<version>1.1.7</version>
+  		</dependency>
+  	</dependencies>
+  </dependencyManagement>
 </project>
