--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,20 @@
         <comments>GPL 3</comments>
       </license>
     </licenses>
-  
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
   <inceptionYear>2014</inceptionYear>
   <name>JAC</name>
   <url>https://github.com/uaEquals42/JAC</url>
