--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,23 @@
 
 	<build>
 		<plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>jac.Jac</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+
+            </plugin>
+
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -46,11 +63,11 @@
   		<artifactId>junit</artifactId>
   		<scope>test</scope>
   	</dependency>
-  	<dependency>
-  		<groupId>pl.pragmatists</groupId>
-  		<artifactId>JUnitParams</artifactId>
-  		<scope>test</scope>
-  	</dependency>
+      <dependency>
+          <groupId>org.luaj</groupId>
+          <artifactId>luaj-jse</artifactId>
+      </dependency>
+
   </dependencies>
   <dependencyManagement>
   	<dependencies>
@@ -69,11 +86,12 @@
   			<artifactId>junit</artifactId>
   			<version>4.12</version>
   		</dependency>
-  		<dependency>
-  			<groupId>pl.pragmatists</groupId>
-  			<artifactId>JUnitParams</artifactId>
-  			<version>1.0.5</version>
-  		</dependency>
-  	</dependencies>
+
+        <dependency>
+            <groupId>org.luaj</groupId>
+            <artifactId>luaj-jse</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+    </dependencies>
   </dependencyManagement>
 </project>
