--- a/pom.xml
+++ b/pom.xml
@@ -1,97 +1,98 @@
+
+
+
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>uaEquals42</groupId>
-  <artifactId>JAC</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <issueManagement>
-  	<url>https://github.com/uaEquals42/JAC/issues</url>
-  </issueManagement>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>uaEquals42</groupId>
+    <artifactId>JAC</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <issueManagement>
+        <url>https://github.com/uaEquals42/JAC/issues</url>
+    </issueManagement>
   
-  <licenses>
-      <license>
-        <name>GPL 3</name>
-        <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
-        <distribution>repo</distribution>
-        <comments>GPL 3</comments>
-      </license>
+    <licenses>
+        <license>
+            <name>GPL 3</name>
+            <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
+            <distribution>repo</distribution>
+            <comments>GPL 3</comments>
+        </license>
     </licenses>
 
-	<build>
-		<plugins>
+   
+  <properties>
+    <jme3_g>org.jmonkeyengine</jme3_g>
+    <jme3_v>3.1.0-beta1</jme3_v>
+  </properties>
+
+
+    <build>
+        <plugins>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.6.0</version>
                 <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <mainClass>jac.Jac</mainClass>
-                        </manifest>
-                    </archive>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
-
             </plugin>
+        </plugins>
+    </build>
 
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-
-  <inceptionYear>2014</inceptionYear>
-  <name>JAC</name>
-  <url>https://github.com/uaEquals42/JAC</url>
-  <dependencies>
-  	<dependency>
-  		<groupId>ch.qos.logback</groupId>
-  		<artifactId>logback-classic</artifactId>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.google.code.gson</groupId>
-  		<artifactId>gson</artifactId>
-  	</dependency>
-  	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  		<scope>test</scope>
-  	</dependency>
-      <dependency>
-          <groupId>org.luaj</groupId>
-          <artifactId>luaj-jse</artifactId>
-      </dependency>
-
-  </dependencies>
-  <dependencyManagement>
-  	<dependencies>
-  		<dependency>
-  			<groupId>ch.qos.logback</groupId>
-  			<artifactId>logback-classic</artifactId>
-  			<version>1.1.7</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>com.google.code.gson</groupId>
-  			<artifactId>gson</artifactId>
-  			<version>2.7</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>junit</groupId>
-  			<artifactId>junit</artifactId>
-  			<version>4.12</version>
-  		</dependency>
-
+    <inceptionYear>2014</inceptionYear>
+    <name>JAC</name>
+    <url>https://github.com/uaEquals42/JAC</url>
+    <dependencies>
+   <dependency>
+      <groupId>${jme3_g}</groupId>
+      <artifactId>jme3-core</artifactId>
+      <version>${jme3_v}</version>
+    </dependency>
+    <dependency>
+      <groupId>${jme3_g}</groupId>
+      <artifactId>jme3-desktop</artifactId>
+      <version>${jme3_v}</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>${jme3_g}</groupId>
+      <artifactId>jme3-lwjgl</artifactId>
+      <version>${jme3_v}</version>
+    </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.luaj</groupId>
             <artifactId>luaj-jse</artifactId>
             <version>3.0.1</version>
         </dependency>
+
     </dependencies>
-  </dependencyManagement>
+    
+    
+    <repositories>
+            <repository>
+      <id>jcenter</id>
+      <url>http://jcenter.bintray.com</url>
+    </repository>
+    </repositories>
 </project>
+
+
